fix style z-index order, add extensionEnabled check to page popup

--- a/content.css
+++ b/content.css
@@ -4,7 +4,7 @@
 	top:20px;
 	height:130px;
 	width:600px;
-    z-index: 999;
+    z-index: 1001;
     font-family: Lato;
 }
 
